syntax/src/snapshots/test__lexer::test::lex_floats.snap
---
created: "2020-02-03T20:27:01.173682Z"
creator: insta@0.8.2
source: syntax/src/lexer.rs
expression: tokens
---
[
    Span {
        value: Token {
            kind: FLOAT_NUMBER,
            len: 5,
        },
        start: Position {
            column: 1,
            line: 1,
            absolute: 0,
        },
        end: Position {
            column: 6,
            line: 1,
            absolute: 5,
        },
    },
    Span {
        value: Token {
            kind: COMMA,
            len: 1,
        },
        start: Position {
            column: 6,
            line: 1,
            absolute: 5,
        },
        end: Position {
            column: 6,
            line: 1,
            absolute: 5,
        },
    },
    Span {
        value: Token {
            kind: FLOAT_NUMBER,
            len: 5,
        },
        start: Position {
            column: 7,
            line: 1,
            absolute: 6,
        },
        end: Position {
            column: 12,
            line: 1,
            absolute: 11,
        },
    },
    Span {
        value: Token {
            kind: COMMA,
            len: 1,
        },
        start: Position {
            column: 12,
            line: 1,
            absolute: 11,
        },
        end: Position {
            column: 12,
            line: 1,
            absolute: 11,
        },
    },
    Span {
        value: Token {
            kind: FLOAT_NUMBER,
            len: 5,
        },
        start: Position {
            column: 13,
            line: 1,
            absolute: 12,
        },
        end: Position {
            column: 18,
            line: 1,
            absolute: 17,
        },
    },
]
