syntax/src/snapshots/test__lexer::test::lex_nested_block_comments.snap
---
created: "2020-02-03T20:27:01.173621Z"
creator: insta@0.8.2
source: syntax/src/lexer.rs
expression: tokens
---
[
    Span {
        value: Token {
            kind: COMMENT,
            len: 35,
        },
        start: Position {
            column: 1,
            line: 1,
            absolute: 0,
        },
        end: Position {
            column: 36,
            line: 1,
            absolute: 35,
        },
    },
]
